Try attaching a volume from the host user desktop

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "2"
 services:
   test-scripts:
     build: .
+    volumes: 
+    - /Users/Dan/Desktop:/data
     depends_on:
     - selenium
   selenium:
