--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build: .
     volumes: 
     - /Users/Dan/Desktop:/data
+    environment: 
+    - SELENIUM_HOST=selenium
+    - SCREENSHOT_SAVE_PATH=/data/screenshot2.png
     depends_on:
     - selenium
   selenium:
